testing/tests/ui/loop_cycle_empty.stderr
error: loop.cycle(…) cannot use an empty array
 --> ForCycleEmpty.txt:1:36
  |
       1 | {% for v in values %}{{ loop.cycle([]) }}{{ v }},{% endfor %}
         |                                    ^ close to this token
         |
 --> tests/ui/loop_cycle_empty.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
